# entities/auth.go
@@ -1,0 +1,10 @@
+package entities
+
+import "gorm.io/gorm"
+
+type User struct {
+    gorm.Model
+    Name     string `json:"name"`
+    Email    string `json:"email" gorm:"unique"`
+    Password string `json:"password"`
+}
