# features/auth/getProfile/response.go
@@ -1,0 +1,7 @@
+package getprofile
+
+type GetUserResponse struct {
+    Id     uint `json:"Id"`
+    Name     string `json:"name"`
+    Email    string `json:"email" gorm:"unique"`
+}
