# features/auth/login/handler.go
@@ -1,0 +1,36 @@
+package login
+
+import (
+	r "foodorder/infrastructure/repositories"
+
+	"github.com/gofiber/fiber/v2"
+	"gorm.io/gorm"
+)
+
+// Login godoc
+//	@Summary
+//	@Description	Log In
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		AuthRequest	true	"Create user request body"
+//	@Success		200		{object}	AuthResponse
+//	@Failure		400		{object}	map[string]string
+//	@Failure		401		{object}	map[string]string
+//	@Router			/api/auth/login [post]
+func Login(db *gorm.DB) fiber.Handler {
+    return func(c *fiber.Ctx) error {
+        var req AuthRequest
+        if err := c.BodyParser(&req); err != nil {
+            return c.Status(400).JSON(fiber.Map{"error": "Invalid request"})
+        }
+
+        user, err := r.FindUserByEmail(db, req.Email)
+        if err != nil || !r.CheckPasswordHash(req.Password, user.Password) {
+            return c.Status(401).JSON(fiber.Map{"error": err.Error()})
+        }
+
+        token, _ := r.GenerateJWT(user.ID)
+        return c.JSON(AuthResponse{Token: token})
+    }
+}
